Basic home page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link href="css/style.css" rel="stylesheet">
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700">
-        <title>Le Flip</title>
-    </head>
-    <body>
-        <p>Hello</p>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700">
+    <title>Le Flip</title>
+</head>
+
+<body>
+    <div class="container">
+        <nav>
+            <div class="navbar">
+                <div class="logo">
+                    <h1>Le Flip</h1>
+                </div>
+                <div>
+                    <ul class="menu-links">
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">Photos</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Où nous trouver</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <main>
+            <div class="jumbotron">
+                
+            </div>
+        </main>
+    </div>
+</body>
+
 </html>
