Add menu and beginning of gallery

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <title>Le Flip</title>
 </head>
 
@@ -17,7 +19,7 @@
                 </div>
                 <div>
                     <ul class="menu-links">
-                        <li><a href="#">Menu</a></li>
+                        <li><a href="menu.html">Menu</a></li>
                         <li><a href="#">Photos</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">Où nous trouver</a></li>
@@ -27,10 +29,140 @@
         </nav>
 
         <main>
-            <div class="jumbotron">
-                
+            <div class="content">
+                <h1>Le Flip</h1>
+                <h2>Bières & saucissons à foison</h2>
+            </div>
+            <div class="page-menu">
+                <div class="box menu-bieres">
+                    <h3>Bières</h3>
+                    <table class="grille-menu">
+                        <tr>
+                            <td>Jupiler</td>
+                            <td>2€</td>
+                        </tr>
+                        <tr>
+                            <td>Maes</td>
+                            <td>2€</td>
+                        </tr>
+                        <tr>
+                            <td>Duvel</td>
+                            <td>3€</td>
+                        </tr>
+                        <tr>
+                            <td>Zinnebir</td>
+                            <td>3€</td>
+                        </tr>
+                        <tr>
+                            <td>Jambe de Bois</td>
+                            <td>3€</td>
+                        </tr>
+                        <tr>
+                            <td>Taras Boulba</td>
+                            <td>3€</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="box menu-softs">
+                    <h3>Softs</h3>
+                    <table class="grille-menu">
+                        <tr>
+                            <td>Coca-Cola</td>
+                            <td>2€</td>
+                        </tr>
+                        <tr>
+                            <td>Ice-Tea</td>
+                            <td>2€</td>
+                        </tr>
+                        <tr>
+                            <td>Fanta</td>
+                            <td>2€</td>
+                        </tr>
+                        <tr>
+                            <td>Eau</td>
+                            <td>2€</td>
+                        </tr>
+                        <tr>
+                            <td>Jus d'orange</td>
+                            <td>3€</td>
+                        </tr>
+                        <tr>
+                            <td>Thé</td>
+                            <td>2€</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="box menu-alcools">
+                    <h3>Alcools</h3>
+                    <table class="grille-menu">
+                        <tr>
+                            <td>Whisky</td>
+                            <td>6€</td>
+                        </tr>
+                        <tr>
+                            <td>Amaretto</td>
+                            <td>6€</td>
+                        </tr>
+                        <tr>
+                            <td>Rhum</td>
+                            <td>6€</td>
+                        </tr>
+                        <tr>
+                            <td>Gin</td>
+                            <td>6€</td>
+                        </tr>
+                        <tr>
+                            <td>Vodka</td>
+                            <td>6€</td>
+                        </tr>
+                        <tr>
+                            <td>Champagne</td>
+                            <td>6€</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="box menu-snacks">
+                    <h3>Snacks</h3>
+                    <table class="grille-menu">
+                        <tr>
+                            <td>Saucisson aux champignons</td>
+                            <td>6€</td>
+                        </tr>
+                        <tr>
+                            <td>Saucisson au poivre</td>
+                            <td>6€</td>
+                        </tr>
+                        <tr>
+                            <td>Saucisson nature</td>
+                            <td>6€</td>
+                        </tr>
+                        <tr>
+                            <td>Chips</td>
+                            <td>6€</td>
+                        </tr>
+                        <tr>
+                            <td>Assiette de fromages</td>
+                            <td>6€</td>
+                        </tr>
+                    </table>
+                </div>
+
+
+            </div>
+            <div class="page-photo">
+                <div class="gallery first-gallery"></div>
+                <div class="gallery second-gallery"></div>
             </div>
         </main>
+        <footer>
+            <div class="footer">
+                <ul>
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                </ul>
+                <p>Copyright &copy; - 2018 by Lily Danhaive & Matthieu Brouillard. All rights reserved. </p>
+            </div>
+        </footer>
     </div>
 </body>
 
