--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div>
                     <ul class="menu-links">
-                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="#menu">Menu</a></li>
                         <li><a href="#">Photos</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">Où nous trouver</a></li>
@@ -33,7 +33,7 @@
                 <h1>Le Flip</h1>
                 <h2>Bières & saucissons à foison</h2>
             </div>
-            <div class="page-menu">
+            <div class="page-menu" id="menu">
                 <div class="box menu-bieres">
                     <h3>Bières</h3>
                     <table class="grille-menu">
