--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-        crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Yantramanav:100,300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <title>Le Flip</title>
 </head>
 
@@ -15,14 +15,14 @@
         <nav>
             <div class="navbar">
                 <div class="logo">
-                    <h1>Le Flip</h1>
+                    <h1>Flip</h1>
                 </div>
                 <div>
                     <ul class="menu-links">
                         <li><a href="#menu">Menu</a></li>
                         <li><a href="#gallery">Photos</a></li>
                         <li><a href="#location">Où nous trouver</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -30,10 +30,10 @@
 
         <main>
             <div class="content">
-                <h1>Le Flip</h1>
-                <h2>Bières & saucissons à foison</h2>
+                <h1>Flip</h1>
+                <h2>Bières &amp; saucissons à foison</h2>
             </div>
-            <div class="page-menu" id="menu">
+            <div class="page page-menu" id="menu">
                 <div class="box menu-bieres">
                     <h3>Bières</h3>
                     <table class="grille-menu">
@@ -149,39 +149,32 @@
 
 
             </div>
-            <div class="page-photo" id="gallery">
+            <div class="page page-photo" id="gallery">
                 <div class="gallery first-gallery"></div>
                 <div class="gallery second-gallery"></div>
                 <div class="gallery third-gallery"></div>
                 <div class="gallery fourth-gallery"></div>
                 <div class="gallery fifth-gallery"></div>
             </div>
-            <div class="page-location" id="location">
-                <div class="map-img"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3517.3331568107947!2d4.373704872229281!3d50.82640830046883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c494b6419a65%3A0xcea515c54087b932!2sFLIP!5e0!3m2!1sfr!2sbe!4v1537359954123"
-                        width="600" height="450" frameborder="0" style="border:0" allowfullscreen class="center"></iframe></div>
-                <div class="map-address"></div>
+            <div class="page page-location" id="location">
+                <div class="map-img"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3517.3331568107947!2d4.373704872229281!3d50.82640830046883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c494b6419a65%3A0xcea515c54087b932!2sFLIP!5e0!3m2!1sfr!2sbe!4v1537359954123" width="600" height="450" frameborder="0" style="border:0" allowfullscreen class="center"></iframe></div>
             </div>
-            <div class="page-contact" id="contact">
+            <div class="page page-contact" id="contact">
                 <form>
                     <form class="center">
                         <fieldset class="center">
-                                <legend>Contact</legend>
-                            <input type="radio" name="gender" value="male">Male
+                            <legend>Contact</legend>
+                            <input type="radio" name="gender" value="male">Male<br>
                             <input type="radio" name="gender" value="female"> Female<br>
-                            <input type="radio" name="gender" value="other"> Other<br>
-                            Nom :
-                            <input type="text" name="name"><br>
-                            E-Mail :
-                            <input type="email" name="name"><br>
-                            Raison : <br>
+                            <input type="radio" name="gender" value="other"> Other<br> Nom :
+                            <input type="text" name="name"><br> E-Mail :
+                            <input type="email" name="name"><br> Raison : <br>
                             <select>
                                 <option value="default" selected>-</option>
                                 <option value="lost-item">Objets perdus</option>
                                 <option value="beer-idea">Proposition de bière</option>
                                 <option value="other">Autre</option>
-                            </select><br>
-
-                            Message :<br>
+                            </select><br> Message :<br>
                             <textarea>Message...</textarea><br>
                             <input type="checkbox"> S'abonner à notre newsletter <br>
                             <input type="submit" value="Envoyer">
@@ -195,7 +188,7 @@
                     <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 </ul>
-                <p>Copyright &copy; - 2018 by Lily Danhaive & Matthieu Brouillard. All rights reserved. </p>
+                <p>Copyright &copy; - 2018 by Lily Danhaive &amp; Matthieu Brouillard. All rights reserved. </p>
             </div>
         </footer>
     </div>
