small changes Menu

--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
                     <table class="grille-menu">
                         <tr>
                             <td>Jupiler</td>
-                            <td>2€</td>
+                            <td class="price">2€</td>
                         </tr>
                         <tr>
                             <td>Maes</td>
-                            <td>2€</td>
+                            <td class="price">2€</td>
                         </tr>
                         <tr>
                             <td>Duvel</td>
-                            <td>3€</td>
+                            <td class="price">3€</td>
                         </tr>
                         <tr>
                             <td>Zinnebir</td>
-                            <td>3€</td>
+                            <td class="price">3€</td>
                         </tr>
                         <tr>
                             <td>Jambe de Bois</td>
-                            <td>3€</td>
+                            <td class="price">3€</td>
                         </tr>
                         <tr>
                             <td>Taras Boulba</td>
-                            <td>3€</td>
+                            <td class="price">3€</td>
                         </tr>
                     </table>
                 </div>
@@ -68,19 +68,19 @@
                     <table class="grille-menu">
                         <tr>
                             <td>Coca-Cola</td>
-                            <td>2€</td>
+                            <td class="price">2€</td>
                         </tr>
                         <tr>
                             <td>Ice-Tea</td>
-                            <td>2€</td>
+                            <td class="price">2€</td>
                         </tr>
                         <tr>
                             <td>Fanta</td>
-                            <td>2€</td>
+                            <td class="price">2€</td>
                         </tr>
                         <tr>
                             <td>Eau</td>
-                            <td>2€</td>
+                            <td class="price">2€</td>
                         </tr>
                         <tr>
                             <td>Jus d'orange</td>
@@ -88,7 +88,7 @@
                         </tr>
                         <tr>
                             <td>Thé</td>
-                            <td>2€</td>
+                            <td class="price">2€</td>
                         </tr>
                     </table>
                 </div>
@@ -97,27 +97,27 @@
                     <table class="grille-menu">
                         <tr>
                             <td>Whisky</td>
-                            <td>6€</td>
+                            <td class="price">6€</td>
                         </tr>
                         <tr>
                             <td>Amaretto</td>
-                            <td>6€</td>
+                            <td class="price">6€</td>
                         </tr>
                         <tr>
                             <td>Rhum</td>
-                            <td>6€</td>
+                            <td class="price">6€</td>
                         </tr>
                         <tr>
                             <td>Gin</td>
-                            <td>6€</td>
+                            <td class="price">6€</td>
                         </tr>
                         <tr>
                             <td>Vodka</td>
-                            <td>6€</td>
+                            <td class="price">6€</td>
                         </tr>
                         <tr>
                             <td>Champagne</td>
-                            <td>6€</td>
+                            <td class="price">6€</td>
                         </tr>
                     </table>
                 </div>
@@ -126,23 +126,23 @@
                     <table class="grille-menu">
                         <tr>
                             <td>Saucisson aux champignons</td>
-                            <td>6€</td>
+                            <td class="price">6€</td>
                         </tr>
                         <tr>
                             <td>Saucisson au poivre</td>
-                            <td>6€</td>
+                            <td class="price">6€</td>
                         </tr>
                         <tr>
                             <td>Saucisson nature</td>
-                            <td>6€</td>
+                            <td class="price">6€</td>
                         </tr>
                         <tr>
                             <td>Chips</td>
-                            <td>6€</td>
+                            <td class="price">6€</td>
                         </tr>
                         <tr>
                             <td>Assiette de fromages</td>
-                            <td>6€</td>
+                            <td class="price">6€</td>
                         </tr>
                     </table>
                 </div>
@@ -175,7 +175,7 @@
                                 <option value="beer-idea">Proposition de bière</option>
                                 <option value="other">Autre</option>
                             </select><br> Message :<br>
-                            <textarea>Message...</textarea><br>
+                            <textarea>Write your comment here</textarea><br>
                             <input type="checkbox"> S'abonner à notre newsletter <br>
                             <input type="submit" value="Envoyer">
                         </fieldset>
