--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body>
     <div class="container">
-        <nav>
-            <div class="navbar">
+        <nav class="navbar">
                 <div class="logo">
                     <h1>Flip</h1>
                 </div>
@@ -25,7 +24,6 @@
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
-            </div>
         </nav>
 
         <main>
