--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700">
     <link href="https://fonts.googleapis.com/css?family=Yantramanav:100,300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <title>Le Flip</title>
 </head>
 
@@ -155,30 +156,50 @@
                 <div class="gallery fifth-gallery"></div>
             </div>
             <div class="page page-location" id="location">
-                <div class="map-img"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3517.3331568107947!2d4.373704872229281!3d50.82640830046883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c494b6419a65%3A0xcea515c54087b932!2sFLIP!5e0!3m2!1sfr!2sbe!4v1537359954123" width="600" height="450" frameborder="0" style="border:0" allowfullscreen class="center"></iframe></div>
+                <div class="map-img"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3517.3331568107947!2d4.373704872229281!3d50.82640830046883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c494b6419a65%3A0xcea515c54087b932!2sFLIP!5e0!3m2!1sfr!2sbe!4v1537359954123"
+                        width="600" height="450" frameborder="0" style="border:0" allowfullscreen class="center"></iframe></div>
             </div>
             <div class="page page-contact" id="contact">
                 <div class="contact-img"></div>
                 <form class="center">
                     <fieldset class="center">
                         <legend>Contact</legend>
-                        <label for="name">Male </label>
-                        <input type="radio" name="gender" value="male"><br>
-                        <label for="name">Female </label>
-                        <input type="radio" name="gender" value="female"><br>
-                        <label for="name">Other </label>
-                        <input type="radio" name="gender" value="other"><br><label for="name">Nom : </label>
-                        <input type="text" name="name"><br><label for="name">Prénom : </label>
-                        <input type="email" name="name"><br> <label for="name">Motif : </label><br>
-                        <select>
-                                <option value="default" selected>-</option>
-                                <option value="lost-item">Objets perdus</option>
-                                <option value="beer-idea">Proposition de bière</option>
-                                <option value="other">Autre</option>
+                        <table>
+                            <tr>
+                                <td><label for="name">Homme </label></td>
+                                <td><input type="radio" name="gender" value="male"><br></td>
+                            </tr>
+                            <tr>
+                                <td><label for="name">Femme </label></td>
+                                <td><input type="radio" name="gender" value="female"><br></td>
+                            </tr>
+                            <tr>
+                                <td> <label for="name">Autre </label></td>
+                                <td><input type="radio" name="gender" value="other"><br></td>
+                            </tr>
+                            <tr>
+                                <td><label for="name">Nom : </label></td>
+                                <td><input type="text" name="name"><br></td>
+                            </tr>
+                            <tr>
+                                <td><label for="name">Prénom : </label></td>
+                                <td><input type="email" name="name"><br> </td>
+                            </tr>
+                            <tr>
+                                <td><label for="name">Motif : </label><br></td>
+                                <td><select id="choice-list">
+                                        <option value="default" selected>-</option>
+                                        <option value="lost-item">Objets perdus</option>
+                                        <option value="beer-idea">Proposition de bière</option>
+                                        <option value="other">Autre</option>
+                                    </select></td>
+                            </tr>
+                        </table>
 
-                            </select><br> Message :<br>
-                        <textarea placeholder="Write your comment here"></textarea><br>
-                        <input type="checkbox"> S'abonner à notre newsletter <br>
+
+                        <label for="name">Message : </label> <br>
+                        <textarea placeholder="Entrez votre message..."></textarea><br>
+                        <input type="checkbox" id="newsletter-button"> S'abonner à notre newsletter <br>
                         <input type="submit" value="Envoyer" id="submit-button">
                     </fieldset>
                 </form>
