--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta charset="utf-8">
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Yantramanav:100,300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-        crossorigin="anonymous">
-    <title>Le Flip</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <title>Flip</title>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="home">
         <nav class="navbar">
             <div class="logo">
-                <h1>Flip</h1>
+                <h1><a href="#home">Flip</a></h1>
             </div>
             <div>
                 <ul class="menu-links">
@@ -33,7 +32,7 @@
                 <h1>Flip</h1>
                 <h2>Bières &amp; saucissons à foison</h2>
             </div>
-            <div class="page page-menu" id="menu">
+            <section class="page page-menu" id="menu">
                 <div class="box menu-bieres">
                     <h3>Bières</h3>
                     <table class="grille-menu">
@@ -148,19 +147,18 @@
                 </div>
 
 
-            </div>
-            <div class="page page-photo" id="gallery">
+            </section>
+            <section class="page page-photo" id="gallery">
                 <div class="gallery first-gallery"></div>
                 <div class="gallery second-gallery"></div>
                 <div class="gallery third-gallery"></div>
                 <div class="gallery fourth-gallery"></div>
                 <div class="gallery fifth-gallery"></div>
-            </div>
-            <div class="page page-location" id="location">
-                <div class="map-img"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3517.3331568107947!2d4.373704872229281!3d50.82640830046883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c494b6419a65%3A0xcea515c54087b932!2sFLIP!5e0!3m2!1sfr!2sbe!4v1537359954123"
-                        width="600" height="450" frameborder="0" style="border:0" allowfullscreen class="center"></iframe></div>
-            </div>
-            <div class="page page-contact" id="contact">
+            </section>
+            <section class="page page-location" id="location">
+                <div class="map-img"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3517.3331568107947!2d4.373704872229281!3d50.82640830046883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c494b6419a65%3A0xcea515c54087b932!2sFLIP!5e0!3m2!1sfr!2sbe!4v1537359954123" width="600" height="450" frameborder="0" style="border:0" allowfullscreen class="center"></iframe></div>
+            </section>
+            <section class="page page-contact" id="contact">
                 <div class="contact-img"></div>
                 <form class="center">
                     <fieldset class="center">
@@ -196,29 +194,28 @@
                                     </select></td>
                             </tr>
                         </table>
-
-
-                        <label for="name">Message : </label> <br>
+                        <label for="name">Message : </label><br>
                         <textarea placeholder="Entrez votre message..."></textarea><br>
                         <input type="checkbox" id="newsletter-button"> S'abonner à notre newsletter <br>
                         <input type="submit" value="Envoyer" id="submit-button">
                     </fieldset>
                 </form>
-
-            </div>
+            </section>
         </main>
+
         <footer>
             <div class="footer">
                 <ul>
                     <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 </ul>
-                <p>Copyright &copy; - 2018 by Lily Danhaive &amp; Matthieu Brouillard. All rights reserved. </p>
+                <p>Copyright &copy; - 2018 by Lily Danhaive &amp; Matthieu Brouillard. All rights reserved.</p>
             </div>
         </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/scroll.js"></script>
+
 </body>
 
 </html>
