--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                             <td>Taras Boulba</td>
                             <td class="price">3€</td>
                         </tr>
+                        <tr>
+                            <td>Super des Fagnes</td>
+                            <td class="price">3,50€</td>
+                        </tr>
+                        
                     </table>
                 </div>
                 <div class="box menu-softs">
@@ -89,6 +94,10 @@
                             <td>Thé</td>
                             <td class="price">2€</td>
                         </tr>
+                        <tr>
+                            <td>Café</td>
+                            <td class="price">2.50€</td>
+                        </tr>
                     </table>
                 </div>
                 <div class="box menu-alcools">
@@ -107,8 +116,8 @@
                             <td class="price">6€</td>
                         </tr>
                         <tr>
-                            <td>Gin</td>
-                            <td class="price">6€</td>
+                            <td>Gin Tonic</td>
+                            <td class="price">7€</td>
                         </tr>
                         <tr>
                             <td>Vodka</td>
@@ -116,7 +125,7 @@
                         </tr>
                         <tr>
                             <td>Champagne</td>
-                            <td class="price">6€</td>
+                            <td class="price">5€</td>
                         </tr>
                     </table>
                 </div>
@@ -137,11 +146,11 @@
                         </tr>
                         <tr>
                             <td>Chips</td>
-                            <td class="price">6€</td>
+                            <td class="price">2€</td>
                         </tr>
                         <tr>
                             <td>Assiette de fromages</td>
-                            <td class="price">6€</td>
+                            <td class="price">5€</td>
                         </tr>
                     </table>
                 </div>
