--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="horaire-div">
                     <table class="horaire">
                         <tr>
-                        <th colspan="2"><h1 id="titre-horaire">Horaire</h1></th></tr>
+                        <th colspan="2"><h1 id="titre-horaire">Horaires</h1></th></tr>
                          
                       
                         <tr>
