--- a/index.html
+++ b/index.html
@@ -39,31 +39,31 @@
                     <h3>Bières</h3>
                     <table class="grille-menu">
                         <tr>
-                            <td>Jupiler</td>
+                            <td class="stuff">Jupiler</td>
                             <td class="price">2€</td>
                         </tr>
                         <tr>
-                            <td>Maes</td>
+                            <td class="stuff">Maes</td>
                             <td class="price">2€</td>
                         </tr>
                         <tr>
-                            <td>Duvel</td>
+                            <td class="stuff">Duvel</td>
                             <td class="price">3€</td>
                         </tr>
                         <tr>
-                            <td>Zinnebir</td>
+                            <td class="stuff">Zinnebir</td>
                             <td class="price">3€</td>
                         </tr>
                         <tr>
-                            <td>Jambe de Bois</td>
+                            <td class="stuff">Jambe de Bois</td>
                             <td class="price">3€</td>
                         </tr>
                         <tr>
-                            <td>Taras Boulba</td>
+                            <td class="stuff">Taras Boulba</td>
                             <td class="price">3€</td>
                         </tr>
                         <tr>
-                            <td>Super des Fagnes</td>
+                            <td class="stuff">Super des Fagnes</td>
                             <td class="price">3,50€</td>
                         </tr>
 
@@ -73,31 +73,31 @@
                     <h3>Softs</h3>
                     <table class="grille-menu">
                         <tr>
-                            <td>Coca-Cola</td>
+                            <td class="stuff">Coca-Cola</td>
                             <td class="price">2€</td>
                         </tr>
                         <tr>
-                            <td>Ice-Tea</td>
+                            <td class="stuff">Ice-Tea</td>
                             <td class="price">2€</td>
                         </tr>
                         <tr>
-                            <td>Fanta</td>
+                            <td class="stuff">Fanta</td>
                             <td class="price">2€</td>
                         </tr>
                         <tr>
-                            <td>Eau</td>
+                            <td class="stuff">Eau</td>
                             <td class="price">2€</td>
                         </tr>
                         <tr>
-                            <td>Jus d'orange</td>
-                            <td>3€</td>
+                            <td class="stuff">Jus d'orange</td>
+                            <td class="price">3€</td>
                         </tr>
                         <tr>
-                            <td>Thé</td>
+                            <td class="stuff">Thé</td>
                             <td class="price">2€</td>
                         </tr>
                         <tr>
-                            <td>Café</td>
+                            <td class="stuff">Café</td>
                             <td class="price">2.50€</td>
                         </tr>
                     </table>
@@ -106,27 +106,27 @@
                     <h3>Alcools</h3>
                     <table class="grille-menu">
                         <tr>
-                            <td>Whisky</td>
+                            <td class="stuff">Whisky</td>
                             <td class="price">6€</td>
                         </tr>
                         <tr>
-                            <td>Amaretto</td>
+                            <td class="stuff">Amaretto</td>
                             <td class="price">6€</td>
                         </tr>
                         <tr>
-                            <td>Rhum</td>
+                            <td class="stuff">Rhum</td>
                             <td class="price">6€</td>
                         </tr>
                         <tr>
-                            <td>Gin Tonic</td>
+                            <td class="stuff">Gin Tonic</td>
                             <td class="price">7€</td>
                         </tr>
                         <tr>
-                            <td>Vodka</td>
+                            <td class="stuff">Vodka</td>
                             <td class="price">6€</td>
                         </tr>
                         <tr>
-                            <td>Champagne</td>
+                            <td class="stuff">Champagne</td>
                             <td class="price">5€</td>
                         </tr>
                     </table>
@@ -135,23 +135,23 @@
                     <h3>Snacks</h3>
                     <table class="grille-menu">
                         <tr>
-                            <td>Saucisson aux champignons</td>
+                            <td class="stuff">Saucisson aux champignons</td>
                             <td class="price">6€</td>
                         </tr>
                         <tr>
-                            <td>Saucisson au poivre</td>
+                            <td class="stuff">Saucisson au poivre</td>
                             <td class="price">6€</td>
                         </tr>
                         <tr>
-                            <td>Saucisson nature</td>
+                            <td class="stuff">Saucisson nature</td>
                             <td class="price">6€</td>
                         </tr>
                         <tr>
-                            <td>Chips</td>
+                            <td class="stuff">Chips</td>
                             <td class="price">2€</td>
                         </tr>
                         <tr>
-                            <td>Assiette de fromages</td>
+                            <td class="stuff">Assiette de fromages</td>
                             <td class="price">5€</td>
                         </tr>
                     </table>
