lets hope its ok

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <h3>Bières</h3>
                     <table class="grille-menu">
                         <tr>
-                            <td class="stuff">Jupiler</td>
+                            <td class="stuff">Cristal</td>
                             <td class="price">2€</td>
                         </tr>
                         <tr>
@@ -64,7 +64,7 @@
                         </tr>
                         <tr>
                             <td class="stuff">Super des Fagnes</td>
-                            <td class="price">3,50€</td>
+                            <td class="price">3,70€</td>
                         </tr>
 
                     </table>
@@ -173,8 +173,6 @@
                                 <h1 id="titre-horaire">Horaires</h1>
                             </th>
                         </tr>
-
-
                         <tr>
                             <td class="jour">Lundi</td>
                             <td>18h - 01h</td>
@@ -210,8 +208,8 @@
             </section>
             <section class="page page-contact" id="contact">
                 <div class="contact-img"></div>
-                <form class="center">
-                    <fieldset class="center">
+                <form>
+                    <fieldset>
                         <legend>Contact</legend>
                         <table>
                             <tr>
@@ -244,8 +242,8 @@
                                     </select></td>
                             </tr>
                         </table>
-                        <label for="name">Message : </label><br>
-                        <textarea placeholder="Entrez votre message..."></textarea><br>
+                        <label for="name">Message : </label>
+                        <textarea placeholder="Entrez votre message..."></textarea>
                         <input type="checkbox" id="newsletter-button"> S'abonner à notre newsletter <br>
                         <input type="submit" value="Envoyer" id="submit-button">
                     </fieldset>
