--- a/index.html
+++ b/index.html
@@ -175,31 +175,31 @@
                         </tr>
                         <tr>
                             <td class="jour">Lundi</td>
-                            <td>18h - 01h</td>
+                            <td>17h - 00h30</td>
                         </tr>
                         <tr>
                             <td class="jour">Mardi</td>
-                            <td>18h - 01h</td>
+                            <td>17h - 00h30</td>
                         </tr>
                         <tr>
                             <td class="jour">Mercredi</td>
-                            <td>18h - 01h</td>
+                            <td>17h - 00h30</td>
                         </tr>
                         <tr>
                             <td class="jour">Jeudi</td>
-                            <td>18h - 01h</td>
+                            <td>17h - 00h30</td>
                         </tr>
                         <tr>
                             <td class="jour">Vendredi</td>
-                            <td>18h - 03h</td>
+                            <td>16h30 - 02h</td>
                         </tr>
                         <tr>
                             <td class="jour">Samedi</td>
-                            <td>17h - 03h</td>
+                            <td>19h - 01h30</td>
                         </tr>
                         <tr>
                             <td class="jour">Dimanche</td>
-                            <td>18h - 00h</td>
+                            <td>Closed</td>
                         </tr>
                     </table>
                 </div>
